Make the database the only source of truth for scoped configuration
The first cut of this feature carried a ScopedConfigAdopter: a published file
whose scope had no rows was parsed, validated and read back into the database.
It defended a scenario the layout makes unreachable - HubJeffreyDirs.workspaces()
is homeDir/workspaces and the database is homeDir/jeffrey-data.db, so the two are
always on one filesystem, and if the home directory is ephemeral the files are
gone with it. It was not a behaviour being preserved either: the old
ProfilerSettingsSynchronizerJob only ever uploaded and pruned, and never read a
file back.

So the rule is now absolute. A value is stored first and published second, and
publishing writes out whatever the database holds - including nothing, which
removes the file. Nothing reads a file back, so a file edited by hand on the
volume is replaced rather than believed. The synchronizer job is three publish
calls with no branch.

The hub's config package goes from nine classes to three. The renderer and the
publisher interface merge into one ScopedConfigPublisher; ScopeDirectories folds
into ScopedConfigManager, which is the only caller that needed it; and the
validator interface, its registry and the async-profiler rules become one
ConfigValueValidators. The publisher no longer hashes anything - it compares the
rendered string with what is on disk, which is exactly equivalent and one concept
fewer, and that is what retires ContentDigest.

The session-provenance chain is removed. AppliedConfigLayer, ContentDigest, the
three project_instance_sessions columns, the three instance_service.proto fields
and the plumbing through WorkspaceReconciler, HubMappers,
JdbcProjectRepositoryRepository, InstancesClient, InstanceSessionResponse,
ProjectInstanceSession.ts and InstancesTimeline.vue all go, and those files are
identical to master again. It existed only to answer "which configuration version
is this JVM on" in the timeline, and it reached into five mo